remove unwanted changes